Replacing .tabs__content {overflow: auto;} with a clear-fix.
Mostly to fix popover shadows.

--- a/stylesheets/_layout.tabs.scss
+++ b/stylesheets/_layout.tabs.scss
@@ -217,9 +217,9 @@
 // }
 
 .tabs__content {
+  @include clear-fix;
   display: table-cell;
   padding: 0 20px;
-  overflow: auto;
   vertical-align: top;
   width: 100%;
 
